kubernetes/client-facing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-server-external
  labels:
    app: websocket-server
spec:
  selector:
    app: websocket-server
  ports:
  - port: 80
    targetPort: 8080
    name: websocket
  type: LoadBalancer
